<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/Cash_Drawer"
        android:textColor="@color/title_text"
        android:textSize="22sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Channel_colon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#6a6a6a" />
    
        <Spinner
            android:id="@+id/spinnerCashDrawerChannel"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnCashDrawerOpen"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_button"
            android:text="@string/Open"
            android:textColor="@color/white"
            android:textSize="@dimen/common_button_text_size"  />

    </LinearLayout>

</LinearLayout>
