<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#e6e6e6" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/setting" />

        <ImageView
            android:id="@+id/imgChannelDockUSB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="34dp"
            android:layout_toLeftOf="@+id/imgChannelTrayUSB"
            android:src="@drawable/channel_dock_usb_0" />

        <ImageView
            android:id="@+id/imgChannelTrayUSB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="34dp"
            android:layout_toLeftOf="@+id/imgChannelDockBT"
            android:src="@drawable/channel_tray_usb_0" />

        <ImageView
            android:id="@+id/imgChannelDockBT"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="34dp"
            android:layout_toLeftOf="@+id/imgSetting"
            android:src="@drawable/channel_dock_bt_0" />

        <ImageView
            android:id="@+id/imgBusyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_toLeftOf="@+id/imgChannelDockUSB"
            android:src="@drawable/ready" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/gridbackground"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/framePrinter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/graybackground" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/Printer"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLED"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/graybackground" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/LED"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/graybackground" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/QR_Scaner"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameCashbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/graybackground" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/Cash_Drawer"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameNewland"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/graybackground" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/Card_Reader"
                    android:textColor="@color/black" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ScrollView
                android:id="@+id/viewContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="18dp" >
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>