<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtLEDTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/Setting"
        android:textColor="@color/title_text"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/POS_Type"
            android:textColor="#888"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupPOSType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioPOSMate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/PosMate" >
            </RadioButton>

            <RadioButton
                android:id="@+id/radioNP10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/NP10" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Connection_Channel"
            android:textColor="#888"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:background="@color/setting_normal"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Dock &amp; Tray USB"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#333"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switchDockUSB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvDockConnUSBDesp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:background="@color/setting_normal"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Dock Bluetooth"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#333"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/switchDockBT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvDockConnBTDesp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgDockBTChange"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@drawable/setting" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Card_Reader_Configuration"
            android:textColor="#888"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:background="@color/setting_normal"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Card Bluetooth"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#333"
                        android:textSize="18sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvCardBTDesp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#666"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgCardBTChange"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@drawable/setting" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/app_version_key" />

        <TextView
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/jar_version_key" />
    </LinearLayout>

</LinearLayout>